update bib file and bump from alpha to beta

--- a/quipucamayoc.bib
+++ b/quipucamayoc.bib
@@ -1,7 +1,15 @@
-@misc{quipucamayoc,
-  Author = {Correia, Sergio and Luck, Stephan},
-  Title = {Digitizing Historical Balance Sheet Data: A Practitioner's Guide},
-  Year = {2022},
+@article{quipucamayoc,
+  title = {Digitizing historical balance sheet data: A practitioner's guide},
+  journal = {Explorations in Economic History},
+  volume = {87},
+  pages = {101475},
+  year = {2023},
+  note = {Methodological Advances in the Extraction and Analysis of Historical Data},
+  issn = {0014-4983},
+  doi = {https://doi.org/10.1016/j.eeh.2022.101475},
+  url = {https://www.sciencedirect.com/science/article/pii/S0014498322000535},
+  author = {Sergio Correia and Stephan Luck},
+  keywords = {OCR, Data extraction, Balance sheets},
+  abstract = {This paper discusses how to successfully digitize large-scale historical micro-data by augmenting optical character recognition (OCR) engines with pre- and post-processing methods. Although OCR software has improved dramatically in recent years due to improvements in machine learning, off-the-shelf OCR applications still present high error rates which limit their applications for accurate extraction of structured information. Complementing OCR with additional methods can however dramatically increase its success rate, making it a powerful and cost-efficient tool for economic historians. This paper showcases these methods and explains why they are useful. We apply them against two large balance sheet datasets and introduce quipucamayoc, a Python package containing these methods in a unified framework.},
   eprint = {arXiv:2204.00052},
-  journal={arXiv preprint arXiv:2204.00052}
 }
